Project01/jitfailure-dolfin_expression_1333ee75830b7227bc03a3d67e20e4fd/error.log
/tmp/tmpdy0gefjz/dolfin_expression_1333ee75830b7227bc03a3d67e20e4fd.cpp: In member function ‘virtual void dolfin::dolfin_expression_1333ee75830b7227bc03a3d67e20e4fd::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const’:
/tmp/tmpdy0gefjz/dolfin_expression_1333ee75830b7227bc03a3d67e20e4fd.cpp:61:26: error: cannot convert ‘Eigen::internal::enable_if<true, const Eigen::CwiseBinaryOp<Eigen::internal::scalar_product_op<double, double>, const Eigen::CwiseNullaryOp<Eigen::internal::scalar_constant_op<double>, const Eigen::Matrix<double, -1, 1> >, const Eigen::Ref<const Eigen::Matrix<double, -1, 1> > > >::type {aka const Eigen::CwiseBinaryOp<Eigen::internal::scalar_product_op<double, double>, const Eigen::CwiseNullaryOp<Eigen::internal::scalar_constant_op<double>, const Eigen::Matrix<double, -1, 1> >, const Eigen::Ref<const Eigen::Matrix<double, -1, 1> > >}’ to ‘Eigen::DenseCoeffsBase<Eigen::Ref<Eigen::Matrix<double, -1, 1> >, 1>::Scalar {aka double}’ in assignment
           values[0] = -6*x;
                          ^
